[project]
name = "esit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beeprint>=2.4.11",
    "click>=8.2.1",
    "customtkinter>=5.2.2",
    "grandalf>=0.8",
    "inquirerpy>=0.3.4",
    "ipython>=9.5.0",
    "kaleido>=1.1.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-groq>=0.3.8",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.6.7",
    "llama-index>=0.12.52",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-llms-langchain>=0.6.1",
    "llama-index-vector-stores-qdrant>=0.6.1",
    "llama-parse>=0.6.67",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
    "pyodbc>=5.2.0",
    "pyqt6>=6.9.1",
    "qdrant-client>=1.15.1",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.43",
    "statsmodels>=0.14.5",
    "tk>=0.1.0",
]
